- Changed QTreeView to QTreeWidget - Harcoded QTreeWidget Content

--- a/ui/obmenu.ui
+++ b/ui/obmenu.ui
@@ -17,7 +17,13 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QTreeView" name="treeMenu"/>
+      <widget class="QTreeWidget" name="treeMenu">
+       <column>
+        <property name="text">
+         <string notr="true">1</string>
+        </property>
+       </column>
+      </widget>
      </item>
     </layout>
    </item>
