--- a/ui/obmenu.ui
+++ b/ui/obmenu.ui
@@ -22,7 +22,7 @@
         <bool>true</bool>
        </property>
        <property name="animated">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
        <column>
         <property name="text">
